--- a/files/ABOUT-ME.html
+++ b/files/ABOUT-ME.html
@@ -1,6 +1,29 @@
-<h2>CONTACT ME</h2>
+<h2 class="title">
+    <span class="alt-2">about me</span>
+</h2>
+
+
+<ul class="pro-meta">
+    <li id="mail">
+        <span class="alt-1">Mail:</span> <a href="mailto:sabbaghomar000@gmail.com">sabbaghomar000@gmail.com</a>
+    </li>
+    <li id="linkedin">
+        <span class="alt-1">LinkedIn</span> <a href="https://www.linkedin.com/in/sabbagh2212/">click-here</a>
+    </li>
+
+    <li id="github">
+        <span class="alt-1">GitHub Reposotpry:</span> <a href="https://github.com/OmSa120224">click-here</a>
+    </li>
+
+</ul>
 
 
 
-<p>GitHub Reposotpry: <a href="https://github.com/OmSa120224">click-here</a></p>
-<p>Mail: <a href="mailto:sabbaghomar000@gmail.com">sabbaghomar000@gmail.com</a></p>
+<p class="description">
+
+</p>
+
+
+<time class="published">
+
+</time>
