--- a/files/Conways-Game-of-Life.html
+++ b/files/Conways-Game-of-Life.html
@@ -29,7 +29,6 @@ The game is a cellular automaton with four rules:
     <li>- Any dead cell with exactly three live neighbors becomes a live cell (reproduction).</li>
 </ul>
 
-
-<time id="published">
-
-</time>
+<p class="description">
+This was originally implemented in C# and later reimplemented in JavaScript to run on the website. It was added as a cosmetic feature. The grid is initialized randomly, with options to start, stop, and reset.
+</p>
