--- a/files/PROJECT-2.html
+++ b/files/PROJECT-2.html
@@ -24,15 +24,6 @@
 
 
 <p class="description">
-This project explores the collaborativelearning environment at Aalborg University. It focuses on understandingand improving upon the current dynamics of doing coding exercises instudy groups. Research has shownthat currently at Aalborg University,there is no tool for facilitating collaborative coding in study groups. To tryand tackle this issue, CoCo has beendeveloped to enhance the collaborative coding experience among studygroups at AAU, while having the capabilities to congregate many differentcourses, lectures, and exercises on asingle web platform.
-
+CoCo is a collaborative coding platform developed to enhance study group exercises at Aalborg University. It enables real-time collaborative coding with instant feedback, supporting multiple courses and exercises.
 </p>
 
-<p class="description">
-  CoCo successfully provides real-time collaborative coding and instant feedback, smoothening the learning process for inexperienced coders. Using technologies such as Yjs and CodeMirror, CoCo ensures conflict free collaboration between users. Furthermore with an integration of Judge0 CoCo is able to execute and display the result of code written by users.
-</p>
-
-
-<time class="published">
-
-</time>
