--- a/files/PROJECT-5.html
+++ b/files/PROJECT-5.html
@@ -19,10 +19,7 @@
 
 
 <p class="description">
-  currently working on it 
+currently working on a project where we use reinforcement learning to design neural network architectures (Neural Architecture Search) for a given dataset.
 </p>
 
 
-<time id="published">
-
-</time>
