--- a/files/THIS-WEBSITE.html
+++ b/files/THIS-WEBSITE.html
@@ -16,14 +16,20 @@
     </li>
 </ul>
 
-
+<p class="description">
+This website was created to showcase the projects I make or contribute to. It is fully static with no backend or database, as none is needed at the moment, though that may be added in the future.
+</p>
 
 <p class="description"> Inspired By: <a href="https://www.robscanlon.com/encom-boardroom/" target="_blank">Encom-Boardroom</a>
 </p>
 
 
-<time id="published">
 
-</time>
-
+<p class="description">
+<ul>Current release: 1.0.0
+    <li>- Website implemented as a fully static build</li>
+    <li>- Completed projects are displayed</li>
+    <li>- Cosmetic features added, including Game of Life and the status dot</li>
+</ul>
+</p>
 
