--- a/files/README.html
+++ b/files/README.html
@@ -5,7 +5,7 @@
 
 <ul class="pro-meta">
     <li id="mail">
-        <span class="alt-1">Mail:</span> <a href="mailto:sabbaghomar000@gmail.com">sabbaghomar000@gmail.com</a>
+        <span class="alt-1">Mail:</span> <a href="mailto:omar.sabbagh2212@gmail.com">omar.sabbagh2212@gmail.com</a>
     </li>
     <li id="linkedin">
         <span class="alt-1">LinkedIn:</span> <a href="https://www.linkedin.com/in/sabbagh2212/">click-here</a>
